[package]
name = "vrc_sa_node"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.10"
chrono = "0.4"
clap = { version = "4.2", features = ["derive"] }
csv = "1.2"
dialoguer = "0.10"
futures = "0.3"
rosc = "0.10"
tokio = { version = "1.27", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.3"
